# Pygame-Metroidvania

./: README.md  main.py  pyproject.toml
Game/: __init__.py  config.json
Game/Sprites/: crystals.py  player.py  sprite.py
Game/Sprites/Enemies/: enemy.py  flying_enemy.py
Game/Sprites/Inanimate/: breakable.py  chest.py  item.py
Game/assets/level/: base.json  cave.json  mossy.json  test.json
Game/utils/: camera.py  hud.py  spritegroup.py  tilemaps.py  timer.py  utils.py
