[project]
name = "metroidvania-game"
version = "0.1.0"
description = ""
authors = [
    {name = "Acidicts",email = "alexjhayes1@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame-ce (>=2.5.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
